stateDiagram-v2
  direction TB
  [*] --> Loading
  Loading --> Idle: success / failure
  Idle --> Adding: Add
  Idle --> Toggling: Toggle
  Idle --> Deleting: Delete
  Idle --> Clearing: ClearCompleted
  Adding --> Idle: Cancel / success / failure
  Toggling --> Idle: Cancel / success / failure
  Deleting --> Idle: Cancel / success / failure
  Clearing --> Idle: Cancel / success / failure
  Crashed --> Loading: Restart
  note right of Crashed
    Defects from Loading, Adding, Toggling, Deleting, Clearing enter Crashed
  end note
